tests/data-clumps/test-cases/parameter-parameter/negative-insufficient-shared/typescript/source/AppointmentScheduler.ts
export class AppointmentScheduler {
  schedule(patientId: string, doctorId: string, appointmentDate: string): void {
    console.log(`Scheduling appointment on ${appointmentDate}`);
  }
}
